--- a/githubisweird.html
+++ b/githubisweird.html
@@ -3,15 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hollow 3D Cube Spawn</title>
   <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
+
     /* Style for the cube */
+    .cube-container {
+      perspective: 800px;
+      width: 100vw;
+      height: 100vh;
+      position: absolute;
+    }
+
     .cube {
       width: 40px;
       height: 40px;
-      position: absolute;
       transform-style: preserve-3d;
-      transform: rotateX(45deg) rotateY(45deg);
+      animation: rotate 1s infinite linear;
+      position: absolute;
     }
 
     .face {
@@ -19,6 +30,7 @@
       height: 100%;
       border: 2px solid #3498db;
       position: absolute;
+      box-sizing: border-box;
     }
 
     .face:nth-child(1) { transform: rotateY(0deg) translateZ(20px); }
@@ -27,18 +39,24 @@
     .face:nth-child(4) { transform: rotateY(-90deg) translateZ(20px); }
     .face:nth-child(5) { transform: rotateX(90deg) translateZ(20px); }
     .face:nth-child(6) { transform: rotateX(-90deg) translateZ(20px); }
+
+    /* Animation to rotate the cube */
+    @keyframes rotate {
+      from { transform: rotateX(0deg) rotateY(0deg); }
+      to { transform: rotateX(360deg) rotateY(360deg); }
+    }
   </style>
 </head>
 <body>
   <script>
-    let count = 1;
+    let cubes = [];
 
-    function createCubes() {
+    function createCubes(amount) {
       const container = document.createElement('div');
       container.classList.add('cube-container');
       document.body.appendChild(container);
 
-      for (let i = 0; i < count; i++) {
+      for (let i = 0; i < amount; i++) {
         const cube = document.createElement('div');
         cube.classList.add('cube');
         cube.style.left = `${Math.random() * (window.innerWidth - 40)}px`;
@@ -51,12 +69,27 @@
         }
 
         container.appendChild(cube);
+        cubes.push(cube);
       }
-
-      count *= 2; // Double the count for the next click
     }
 
-    document.addEventListener('click', createCubes);
+    function updateCubePositions(scrollDelta) {
+      cubes.forEach((cube) => {
+        const currentZ = parseInt(cube.style.transform.match(/translateZ\((.*?)px\)/)[1]);
+        const newZ = currentZ - scrollDelta;
+
+        cube.style.transform = `translateZ(${newZ}px)`;
+      });
+    }
+
+    document.addEventListener('click', () => {
+      const randomAmount = Math.floor(Math.random() * 10) + 1;
+      createCubes(randomAmount);
+    });
+
+    document.addEventListener('wheel', (event) => {
+      updateCubePositions(event.deltaY);
+    });
   </script>
 </body>
 </html>
