--- a/skiddedcubeideav3.html
+++ b/skiddedcubeideav3.html
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spinning Cubes with Infinite Zoom</title>
   <style>
-    body { margin: 0; overflow: hidden; font-family: 'Orbitron', sans-serif; }
+    body { margin: 0; overflow: hidden; font-family: 'Roboto', sans-serif; }
     canvas { display: block; }
     #cubeCount {
       position: absolute;
-      top: 10px;
-      right: 10px;
-      color: red;
-      font-size: 75px;
+      bottom: 10px;
+      left: 10px;
+      color: #0000FF;
+      font-size: 20px;
     }
   </style>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap">
 </head>
 <body>
   <div id="cubeCount">Cube Count: 1</div>
